<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iControl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   
    <string name="weather">天气</string>
    <string name="datenote">账本</string>
    <string name="park">泊车</string>
    <string name="map">地图</string>
    <string name="lock">锁车</string>
    <string name="start">点火</string>
   
    

</resources>
